@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.822 2007-05-30 15:52:54 castaglia Exp $
+$Id: NEWS,v 1.823 2007-06-04 23:53:11 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -43,6 +43,7 @@ CVS
 - Bug 2934 - Function perm_copy_fd() not in older Linux libacl versions.
 - Bug 2923 - ftptop display flickers if delay is greater than 25 seconds.
 - Bug 2900 - Some kernels incorrectly reuse IPv6 ports for EPSV command.
+- Bug 2935 - DELE command doesn't check file stat result before logging.
 
 1.3.1rc2 - Released 12-Jan-2007
 --------------------------------
